Causeview Package Complete/src/objects/Recurring_Donation__c.object
<CustomObject>
    <description>Causeview - Captures recurring gifts</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount per payment</description>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Payments__c</fullName>
        <description>Total number of approved payments received for Active Transaction</description>
        <inlineHelpText>Total number of approved payments received for Active Transaction</inlineHelpText>
        <label>Approved Payments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <description>UK Direct Debit Only - Bank Address</description>
        <inlineHelpText>Bank Address of UK Direct Debit</inlineHelpText>
        <label>Bank Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Branch__c</fullName>
        <description>UK Direct Debit Only - Bank Branch Location</description>
        <inlineHelpText>Bank Branch Location of UK Direct Debit</inlineHelpText>
        <label>Bank Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_City__c</fullName>
        <label>Bank City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Postal_Code__c</fullName>
        <description>UK Direct Debit Only - Bank Postal Code</description>
        <inlineHelpText>Bank Postal Code of UK Direct Debit.</inlineHelpText>
        <label>Bank Postal Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_State__c</fullName>
        <description>UK Direct Debit Only - State the Bank is Located</description>
        <inlineHelpText>State the Bank is Located for UK Direct Debit.</inlineHelpText>
        <label>Bank State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Num__c</fullName>
        <description>Bank branch number.</description>
        <label>Branch #</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consecutive_Declined_Payments__c</fullName>
        <description>Number consecutive declines for Active Transaction</description>
        <inlineHelpText>Number consecutive declines for Active Transaction</inlineHelpText>
        <label>Consecutive Declined Payments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <label>Constituent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Gifts</relationshipLabel>
        <relationshipName>Recurring_Donations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiry_Date__c</fullName>
        <description>Date of credit card expiry.</description>
        <label>Credit Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <description>Masked credit card number.</description>
        <label>Credit Card Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declined_Payments__c</fullName>
        <description>Total number of declined payments for Active Transaction</description>
        <inlineHelpText>Total number of declined payments for Active Transaction</inlineHelpText>
        <label>Declined Payments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of recurring transaction.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Encrypted_Key__c</fullName>
        <description>Encrypted token - used to allow constituents to update their credit card data.</description>
        <label>Encrypted Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_Num__c</fullName>
        <description>Bank institution number.</description>
        <label>Institution #</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Card__c</fullName>
        <description>Name on credit card.</description>
        <label>Name on Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Payment_Start_Date__c</fullName>
        <description>Populated when the payment is changed from the initial Start Date.  Occurs when Next Payment Date or Frequency is changed.</description>
        <inlineHelpText>Populated when the payment is changed from the initial Start Date.  Occurs when Next Payment Date or Frequency is changed.</inlineHelpText>
        <label>New Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Date__c</fullName>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization related to the recurring transaction.</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Recurring_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>The link to the cc processing company&apos;srecurring donation record</description>
        <label>Reference #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUN_Number__c</fullName>
        <description>UK Direct Debit Only - Service User Number - The unique six digit number allocated to organizations authorized to use the Bacs service in the UK</description>
        <inlineHelpText>Service User Number - The unique six digit number allocated to organizations authorized to use the Bacs service in the UK</inlineHelpText>
        <label>SUN Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <description>The day of the month that the recurring donation is processed in the payment gateway.</description>
        <inlineHelpText>The day of the month that the recurring donation is processed in the payment gateway.</inlineHelpText>
        <label>Schedule Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Code_Formatted__c</fullName>
        <description>UK Direct Debit Only - A six digit code uniquely identifying the location of where an account is.</description>
        <formula>LEFT(Sort_Code__c, 2) &amp; &quot;-&quot; &amp; MID(Sort_Code__c,3,2) &amp; &quot;-&quot; &amp; RIGHT(Sort_Code__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A six digit code uniquely identifying the location of where an account is for UK Direct Debit.</inlineHelpText>
        <label>Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <description>UK Direct Debit Only - A six digit code uniquely identifying the location of where an account is.</description>
        <inlineHelpText>A six digit code uniquely identifying the location of where an account is for UK Direct Debit.</inlineHelpText>
        <label>Sort Code Raw</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ACH/PAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Direct Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_Safe_Key__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Encrypted_Key__c , &apos;%&apos;, &apos;%25&apos;), &apos;=&apos; ,&apos;%3D&apos;), &apos;/&apos; ,&apos;%2F&apos;), &apos;?&apos; ,&apos;%3F&apos;), &apos;#&apos;, &apos;%23&apos;), &apos;&amp;&apos;, &apos;%26&apos;) , &apos;+&apos;, &apos;%2B&apos;)</formula>
        <label>URL Safe Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_URL_Parameters__c</fullName>
        <description>Used to merge parameters in the update URL.  Provides encrypted key and recurring ID to the update form.</description>
        <formula>&quot;encryptedRecurringId=&quot; &amp; 
URL_Safe_Key__c &amp; 
&quot;&amp;fname=&quot; &amp; 
Constituent__r.FirstName &amp; 
&quot;&amp;lname=&quot; &amp;
Constituent__r.LastName &amp;
&quot;&amp;frequency=&quot; &amp;
TEXT(Frequency__c)  &amp;
&quot;&amp;amount=&quot; &amp;
TEXT(Amount__c) &amp;
&quot;&amp;OrgName=&quot; &amp;
$Organization.Name  &amp;
&quot;&amp;AccountId=&quot; &amp;
 $Setup.App_Settings__c.CV_Account_Id__c   &amp;
&quot;&amp;recurringId=&quot; &amp; Id &amp;
&quot;&amp;Street=&quot; &amp; Constituent__r.MailingStreet &amp;
&quot;&amp;City=&quot; &amp; Constituent__r.MailingCity &amp;
&quot;&amp;State=&quot; &amp; Constituent__r.MailingState &amp;
&quot;&amp;Postal=&quot; &amp; Constituent__r.MailingPostalCode &amp;
&quot;&amp;Country=&quot; &amp; Constituent__r.MailingCountry &amp;
&quot;&amp;Email=&quot; &amp; Constituent__r.Email</formula>
        <inlineHelpText>Used to merge parameters in the update URL.  Provides encrypted key and recurring ID to the update form.</inlineHelpText>
        <label>Update URL Parameters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Date__c</fullName>
        <description>Day of the month to withdraw funds.</description>
        <inlineHelpText>Day of the month to withdraw funds</inlineHelpText>
        <label>Withdrawal Date</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Payments__c</fullName>
        <description>Number of recurring payments.</description>
        <label>Fixed Number of Payments</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sysMergeAmountPaymentGateway__c</fullName>
        <formula>TEXT(Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sysMergeAmountPaymentGateway</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sysMergeAmount__c</fullName>
        <description>converts Amount from currency to number.  Used to pass to payment gateway.</description>
        <formula>Amount__c</formula>
        <label>sysMergeAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Recurring Gift</label>
    <listViews>
        <fullName>All_Recurring_Gifts</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Frequency__c</columns>
        <columns>Constituent__c</columns>
        <columns>Organization__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Recurring Gifts</label>
    </listViews>
    <nameField>
        <displayFormat>RD-{00000}</displayFormat>
        <label>Recurring Gift No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>